# fast-neighborhood-correlation

./: .gitignore  README.md
data/data_input_results/Custom solution/: 3M_custom_150_200_50_results.txt  6M_300_200_50_custom_results.txt  9M_custom_450_200_50_results.txt  pieris_custom_results.txt
data/data_input_results/Eigen solution/: 3M_150_200_50_eigen_result.txt  Eigen_6M_300_200_50_results.txt  Eigen_9M_450_200_50_results.txt  output_eigen_pieris.txt
data/data_input_results/Python solution/: PY_6M_300_200_50_results.txt  PY_9M_450_200_50_results.txt  python_3M_150_200_50_results.txt  python_output_pieris.txt
scripts/: compare_output_files.py
src/cpp/Custom/: CMakeLists.txt  main.cpp
src/cpp/Eigen/: CMakeLists.txt  main.cpp
src/python/: main.py
